JumpScript/tests/baselines/reference/duplicateTypeParameters1.errors.txt
tests/cases/compiler/duplicateTypeParameters1.jump(1,15): error TS2300: Duplicate identifier 'X'.


==== tests/cases/compiler/duplicateTypeParameters1.jump (1 errors) ====
    function A<X, X>() { }
                  ~
!!! error TS2300: Duplicate identifier 'X'.
    